--- a/Paginas/contatos.html
+++ b/Paginas/contatos.html
@@ -4,26 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contatos de fábio andré</title>
-    <link rel="stylesheet" href="/Meu portfólio/estilos/contato.css">
+    <link rel="stylesheet" href="../estilos/contato.css">
 </head>
 <body>
     <header>
            <nav>
             <h1>Fábio André</h1>
             <ul>
-                <li><a href="/Meu portfólio/index.html">Início</a></li>
-                <li><a href="/Meu portfólio/Paginas/sobre.html">Sobre</a></li>
-                <li><a href="/meu portfólio/Paginas/Projectos.html">Projetos</a></li>
+                <li><a href="../index.html">Início</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
+                <li><a href="Projectos.html">Projetos</a></li>
             </ul>
         </nav><hr>
     </header>
     <div class="Telefone" id="Contactos">
         <h2>Contactos</h2>
         <ul class="contatos">
-            <li><img src="/Meu portfólio/imagem/transferir.jpeg" alt="instagram"><a href="https://www.instagram.com/fabioandre.fa" target="_blank">Fábio André</a></li>
-            <li><img src="/Meu portfólio/imagem/images (1).png " alt="facebook" ><a href="https://www.facebook.com/fabioandre.fa" target="_blank">Fábio André</a></li>
-            <li><img src="/Meu portfólio/imagem/images.png" alt="whatsApp"><a href="https://wa.me/941218364" target="_blank">+244 942 218 364</a></li>
-            <li><img src="/Meu portfólio/imagem/Gmail .png" alt="Gmail"><a href="malito:fabioheboandre033@gmail.com" target="_blank">fabioheboandre033@gmail.com</a></li>
+            <li><img src="../imagem/transferir.jpeg" alt="instagram"><a href="https://www.instagram.com/fabioandre.fa" target="_blank">Fábio André</a></li>
+            <li><img src="../imagem/images (1).png " alt="facebook" ><a href="https://www.facebook.com/fabioandre.fa" target="_blank">Fábio André</a></li>
+            <li><img src="../imagem/images.png" alt="whatsApp"><a href="https://wa.me/941218364" target="_blank">+244 942 218 364</a></li>
+            <li><img src="../imagem/Gmail .png" alt="Gmail"><a href="malito:fabioheboandre033@gmail.com" target="_blank">fabioheboandre033@gmail.com</a></li>
         </ul>
     </div>
 </body>
