--- a/Paginas/Projectos.html
+++ b/Paginas/Projectos.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projetos de fábio andré</title>
-    <link rel="stylesheet" href="/meu portfólio/estilos/Projeto.css">
+    <link rel="stylesheet" href="../estilos/Projeto.css">
 </head>
 <body>
     <header>
            <nav>
             <h1>Fábio André</h1>
             <ul>
-                <li><a href="/meu portfólio/index.html">inicio</a></li>
-                <li><a href="/meu portfólio/Paginas/sobre.html">Sobre</a></li>
-                <li><a href="/meu portfólio/Paginas/contatos.html">Contato</a></li>
+                <li><a href="../index.html">inicio</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
+                <li><a href="contatos.html">Contato</a></li>
             </ul>
         </nav><hr>
     </header>
