--- a/Paginas/Projectos.html
+++ b/Paginas/Projectos.html
@@ -6,6 +6,7 @@
     <title>Projetos de fábio andré</title>
     <link rel="stylesheet" href="../estilos/Projeto.css">
 </head>
+
 <body>
     <header>
            <nav>
@@ -17,5 +18,27 @@
             </ul>
         </nav><hr>
     </header>
+    <div class="projetos">
+        <div class="proto">
+            <a href="https://fabioheboandre033-source.github.io/tela-de-login/" target="_blank">
+                <h2>Tela de login</h2>
+            </a>
+            <img src="../imagem/projetos/Captura de ecrã 2026-02-26 161014.png" alt="Tela de login">
+        </div>
+        <div class="proto">
+            <a href="../../Chrome/Chrome.html" target="_blank">
+                <h2>Google Chrome</h2>
+            </a>
+            <img src="../imagem/projetos/Captura de ecrã 2026-02-26 161202.png" alt="Google Chrome">
+        </div >
+        <div class="proto">
+            <a href="../../Américo projetos/Tabelas/Tarefas/index.html" target="_blank"><h2>Tabelas</h2></a>
+            <img src="../imagem/projetos/Captura de ecrã 2026-02-26 161234.png" alt="Tabelas">
+        </div>
+        <div class="proto">
+            <a href="https://fabioheboandre033-source.github.io/meuperfil/" target="_blank"><h2>Cartão de Perfil</h2></a>
+            <img src="../imagem/projetos/Captura de ecrã 2026-02-26 161312.png" alt="Cartão de Perfil">
+        </div>
+    </div>
 </body>
 </html>
