--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div >
         <h2>Oi, eu sou Fábio André</h2>
         <p>Sou um desenvolvedor web especializado em construir (e ocasionalmente desenhar) experiências digitais excepcionais.</p>
-        <a href="../Paginas/Projectos.html" class="btn">Ver Meu Trabalho</a>
+        <a href="Paginas/Projectos.html" class="btn">Ver Meu Trabalho</a>
       </div>
     </section>
   </header>
